tests/rosetta/out/Java/averages-median-3.error
javac error: exit status 1
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:9: error: cannot find symbol
            int px = now() % arr.size();
                     ^
  symbol:   method now()
  location: class AveragesMedian3
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:10: error: incompatible types: CAP#1 cannot be converted to List<? extends Number>
            List<? extends Number> pv = arr.get(px);
                                               ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:12: error: incompatible types: CAP#1 cannot be converted to List<? extends Number>
            List<? extends Number> tmp = arr.get(px);
                                                ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:13: error: incompatible types: Number cannot be converted to CAP#1
            arr.set(px, arr.get(last));
                               ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:14: error: incompatible types: List<CAP#1> cannot be converted to CAP#2
            arr.set(last, tmp);
                          ^
  where CAP#1,CAP#2 are fresh type-variables:
    CAP#1 extends Number from capture of ? extends Number
    CAP#2 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:18: error: incompatible types: CAP#1 cannot be converted to List<? extends Number>
                List<? extends Number> v = arr.get(i);
                                                  ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:20: error: incompatible types: CAP#1 cannot be converted to List<? extends Number>
                    List<? extends Number> tmp2 = arr.get(px);
                                                         ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:21: error: incompatible types: Number cannot be converted to CAP#1
                    arr.set(px, arr.get(i));
                                       ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:22: error: incompatible types: List<CAP#1> cannot be converted to CAP#2
                    arr.set(i, tmp2);
                               ^
  where CAP#1,CAP#2 are fresh type-variables:
    CAP#1 extends Number from capture of ? extends Number
    CAP#2 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:28: error: incompatible types: List<CAP#1> cannot be converted to double
                return pv;
                       ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:34: error: incompatible types: CAP#1 cannot be converted to List<? extends Number>
                List<? extends Number> tmp2 = arr.get(px);
                                                     ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:35: error: incompatible types: List<CAP#1> cannot be converted to CAP#2
                arr.set(px, pv);
                            ^
  where CAP#1,CAP#2 are fresh type-variables:
    CAP#1 extends Number from capture of ? extends Number
    CAP#2 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:36: error: incompatible types: List<CAP#1> cannot be converted to CAP#2
                arr.set(last, tmp2);
                              ^
  where CAP#1,CAP#2 are fresh type-variables:
    CAP#1 extends Number from capture of ? extends Number
    CAP#2 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:41: error: incompatible types: CAP#1 cannot be converted to double
        return arr.get(0);
                      ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
/tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java:45: error: incompatible types: int cannot be converted to String
        int half = Integer.parseInt((arr.size() / 2));
                                                ^
Note: /tmp/TestMochiToJavaaverages-median-32801890183/001/AveragesMedian3.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
15 errors
